# harvesttimer-qt

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  addtaskaction.cpp  addtaskaction.h  addtaskform.cpp  addtaskform.h  addtaskform.ui  customcombobox.cpp  customcombobox.h  customscrollarea.cpp  customscrollarea.h  customtaskdialog.cpp  customtaskdialog.h  customtrayicon.cpp  customtrayicon.h  datelabel.cpp  datelabel.h  edittaskform.cpp  edittaskform.h  edittaskform.ui  favourite.h  favourites.cpp  favourites.h  favourites.ui  favouriteslist.cpp  favouriteslist.h  favouritesscrollarea.cpp  favouritesscrollarea.h  favouritewidget.cpp  favouritewidget.h  favouritewidget.ui  harvesthandler.cpp  harvesthandler.h  harvestproject.h  harvesttask.h  harvesttimer-qt_en_US.ts  harvesttimer-qt_es_ES.ts  icons.qrc  (+21 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  deb.yml
debian/: copyright
resources/desktop/: harvest.desktop  org.jb.harvest.desktop
src/: datelabel.cpp  favourites.cpp  favouritewidget.cpp  favouritewidget.h  favouritewidget.ui  harvesttask.h  mainwindow.cpp  mainwindow.ui  project.h  settingsmanager.cpp  task.h  taskwidget.cpp  taskwidget.h  taskwidget.ui
